begin adding bootstrap col to layout

--- a/app/partials/event/event.koreaburn2015.html
+++ b/app/partials/event/event.koreaburn2015.html
@@ -1,14 +1,15 @@
 
-    <div class="section">
-      <h3>  2014 Theme – Elements</h3>
-      <h4>Elements</h4>
+<div >
+  <tabset class="content-sub" vertical="true">
+    <tab class="section" heading="2014 Theme – Elements">
+      <h4>2014 Theme – Elements</h4>
       <p>
         Elements, theme of this year, means the basic parts or principles of things. KOREA BURN 2014 will use a new layout for dividing the sectors, which is inspired by Korea flag. Each symbol on the flag represents an element: earth, air, water, or fire. We want to encourage people to bring their own elements in there. Someone could make music as his or her way to express air. Someone might make huge sculpture that visualize the air. Everybody has their own unique element, and it can be brought by various ways. KOREA BURN 2014 will be the space and time for the unique elements with style brought by burners.
       </p>
       <a href="http://goo.gl/kJWCt7">http://goo.gl/kJWCt7</a>
-    </div>
+    </tab>
 
-    <div class="section">
+    <tab class="section" heading="What is KOREA BURN?">
       <h4>What is KOREA BURN?</h4>
       <p>
         KOREA BURN  is an official regional burn event of Burning Man.
@@ -29,10 +30,9 @@
         We hope to make KOREA BURN a popular and annual event. With your help and enthusiasm, we can make an event that will rock the Korean peninsula. So, fellow burner, what can you do to add to the community of KOREA BURN?
       </p>
       <a href="http://goo.gl/FfWLoK">http://goo.gl/FfWLoK</a>
-    </div>
+    </tab>
 
-
-    <div class="section">
+    <tab class="section" heading="What is Burning Man?">
       <h4>What is Burning Man?</h4>
       <p>
         Trying to explain what Burning Man is to someone who has never been to the event is a bit like trying to explain what a particular color looks like to someone who is blind. In this section you will find the peripheral definitions of what the event is as a whole, but to truly understand this event, one must participate. This site serves to try to paint a picture of the Burning Man experience to those who are new to the project, as well as to give those participants looking to keep the fire burning in their daily lives an environment in which to connect to their fellow community members. For a brief yet eloquent overview of the entire event from the time of arrival to the time of exodus, please read “What is Burning Man?“, an essay written by participant and one-time web team member, Molly Steenson. Please see archived sections for each year to read more about the art themes, art installations and theme camps for each year.
@@ -54,21 +54,19 @@
       </p>
       <p><a href="http://burningman.org/network/about-us/">Find out more here!</a></p>
       <p>source : Burning Man <a href="www.burningman.com">www.burningman.com</a></p>
-    </div>
+    </tab>
 
-
-    <div class="section">
-      <h3>Mission</h3>
+    <tab class="section" heading="Mission">
+      <h4>Mission</h4>
       <p>
         Our mission is to produce the annual event known as “Burning Man” and to guide, nurture and protect the more permanent community created by its culture. Our intention is to generate society that connects each individual to his or her creative powers, to participation in community, to the larger realm of civic life, and to the even greater world of nature that exists beyond society. We believe that the experience of KOREA BURN can produce positive spiritual change in the world. To this end, it is equally important that we communicate with one another. KOREA BURN is radically inclusive, and its meaning is potentially accessible to anyone. The touchstone of value in our culture will always be immediacy: experience before theory, moral relationships before politics, survival before services, roles before jobs, embodied ritual before symbolism, work before vested interest, participant support before sponsorship. Finally, in order to accomplish these ends, KOREA BURN must endure as a self-supporting enterprise that is capable of sustaining the lives of those who dedicate themselves to its work. From this devotion spring those duties that we owe to one another. We will always burn the Men.
       </p>
       Source : www.burningman.com
       <a href="http://goo.gl/Z9EMzE">http://goo.gl/Z9EMzE</a>
-    </div>
+    </tab>
 
-    <div class="section">
-      <h3>Past Events</h3>
-      <h4>Korea Burn Video</h4>
+    <tab class="section" heading="Past Events">
+      <h4>Past Events - Korea Burn Video</h4>
       <div class="embed-responsive embed-responsive-16by9">
         <iframe src="https://player.vimeo.com/video/47637572" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
@@ -77,5 +75,6 @@
       <div class="embed-responsive embed-responsive-4by3">
         <iframe width="640" height="480" src="https://www.kickstarter.com/projects/koreaburn/lets-do-this-here-korea-burn-2012/widget/video.html" frameborder="0" scrolling="no"> </iframe>
       </div>
-
-    </div>
+    </tab>
+  </tabset>
+</div>
