--- a/app/partials/event/event.html
+++ b/app/partials/event/event.html
@@ -1,10 +1,16 @@
 <!-- partials/event/event.html -->
-<main>
-  <div class="img-reel hidden-xs">
+<div class="home row">
+  <div class="img-reel hidden-sm col-sm-3">
     <div class="img-holder"></div>
   </div>
 
-  <div class="content-page">
+  <div class="banner">
+    <p>Welcome to</p>
+    <img class="img-responsive" src="images/logo-1.png" alt="Korea Burn Logo"/>
+    <p>Korea Burn</p>
+  </div>
+
+  <div class="content-page col-sm-9">
 
     <div class="content-toggle">
       <H2>Events</H2>
@@ -12,4 +18,4 @@
     </div>
     <div ui-view></div>
   </div>
-</main>
+</div>
