add a working responsive layout

--- a/app/partials/event/event.html
+++ b/app/partials/event/event.html
@@ -1,5 +1,5 @@
 <!-- partials/event/event.html -->
-<div class="home row">
+<div class="home content-page row">
   <div class="img-reel hidden-sm col-sm-3">
     <div class="img-holder"></div>
   </div>
@@ -10,7 +10,7 @@
     <p>Korea Burn</p>
   </div>
 
-  <div class="content-page col-sm-9">
+  <div class="col-xs-offset-1 col-sm-10">
 
     <div class="content-toggle">
       <H2>Events</H2>
