--- a/app/partials/event/event.koreaburn2015.html
+++ b/app/partials/event/event.koreaburn2015.html
@@ -2,11 +2,13 @@
 <div >
   <tabset class="content-sub" vertical="true">
     <tab class="section" heading="2014 Theme – Elements">
-      <h4>2014 Theme – Elements</h4>
-      <p>
-        Elements, theme of this year, means the basic parts or principles of things. KOREA BURN 2014 will use a new layout for dividing the sectors, which is inspired by Korea flag. Each symbol on the flag represents an element: earth, air, water, or fire. We want to encourage people to bring their own elements in there. Someone could make music as his or her way to express air. Someone might make huge sculpture that visualize the air. Everybody has their own unique element, and it can be brought by various ways. KOREA BURN 2014 will be the space and time for the unique elements with style brought by burners.
-      </p>
-      <a href="http://goo.gl/kJWCt7">http://goo.gl/kJWCt7</a>
+      <div>
+        <h4>2014 Theme – Elements</h4>
+        <p>
+          Elements, theme of this year, means the basic parts or principles of things. KOREA BURN 2014 will use a new layout for dividing the sectors, which is inspired by Korea flag. Each symbol on the flag represents an element: earth, air, water, or fire. We want to encourage people to bring their own elements in there. Someone could make music as his or her way to express air. Someone might make huge sculpture that visualize the air. Everybody has their own unique element, and it can be brought by various ways. KOREA BURN 2014 will be the space and time for the unique elements with style brought by burners.
+        </p>
+        <a href="http://goo.gl/kJWCt7">http://goo.gl/kJWCt7</a>
+      </div>
     </tab>
 
     <tab class="section" heading="What is KOREA BURN?">
