--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -380,21 +380,31 @@ ol {
 
 
   /* Misc */
+  overflow-x: hidden;
 }
 
 .content-page {
-  width: 100%;
-  max-width: 850px;
+  //width: 100%;
+  //max-width: 1150px;
 
   @media screen and (min-width: 768px) {
-    width: 77%;
-    padding-left: 100px;
+    //width: 77%;
+    //padding-left: 100px;
   }
 }
+.tab-content {
+  width: 85%;
+  @media screen and (min-width: 600px) {
+    width: 60%;
+  }
+  @media screen and (min-width: 992px) {
+    width: 55%;
+  }
 
+}
 .content-sub {
   ul {
-    width: 20%;
+    //width: 20%;
     vertical-align: top;
   }
   li {
@@ -406,7 +416,7 @@ ol {
     //border-bottom-color: ;
   }
   &>div {
-    width: 78%;
+    //width: 78%;
     text-align: center;
   };
 }
@@ -445,7 +455,7 @@ ol {
 .img-reel {
   position: absolute;
   right: 0;
-  width: 25%;
+  //width: 25%;
   height: 100%;
   max-width: 300px;
   //background-color: $bg-color-alt;
